[EVO] creaizone nuovo logica user start work